Fix: Repo and live site links overflowing from project containers

--- a/src/components/Projects/project.css
+++ b/src/components/Projects/project.css
@@ -50,7 +50,7 @@
 .proj-description {
 	color: white;
 	text-align: center;
-	margin: 1.3em;
+	margin: 0.6em;
 	font-weight: 700;
 	font-size: 1em;
 }
